# doc2graph

./: .gitignore  LICENCE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml
DATA/FUNSD/test_bbox/: 82092117.txt  82200067_0069.txt  82250337_0338.txt  82251504.txt  82252956_2958.txt  82253058_3059.txt  82253245_3247.txt  82253362_3364.txt  82254765.txt  82491256.txt  82504862.txt  82562350.txt  82573104.txt  82837252.txt  83443897.txt  83553333_3334.txt  83573282.txt  83594639.txt  83624198.txt  83635935.txt  83641919_1921.txt  83772145.txt  83823750.txt  83996357.txt  85201976.txt  85240939.txt  85540866.txt  85629964.txt  86075409_5410.txt  86079776_9777.txt  86220490.txt  86230203_0206.txt  86236474_6476.txt  86244113.txt  86263525.txt  86328049_8050.txt  87086073.txt  87093315_87093318.txt  87125460.txt  87137840.txt  (+10 more)
DATA/FUNSD/train_bbox/: 0000971160.txt  0000989556.txt  0000990274.txt  0000999294.txt  0001118259.txt  0001123541.txt  0001129658.txt  0001209043.txt  0001239897.txt  0001438955.txt  0001456787.txt  0001463282.txt  0001463448.txt  0001476912.txt  0001477983.txt  0001485288.txt  00040534.txt  00070353.txt  00093726.txt  0011505151.txt  0011838621.txt  0011845203.txt  0011856542.txt  0011859695.txt  0011899960.txt  0011906503.txt  0011973451.txt  0011974919.txt  0011976929.txt  0012178355.txt  0012199830.txt  0012529284.txt  0012529295.txt  0012602424.txt  0012947358.txt  0013255595.txt  00283813.txt  0030031163.txt  0030041455.txt  0060000813.txt  (+109 more)
configs/: base.yaml  cv-1650992863.yaml  cv-1651004399.yaml  gcn.yaml  model.yaml  preprocessing.yaml  train.yaml
configs/models/: e2e.yaml  edge.yaml  gat.yaml  gcn.yaml
doc2graph/: __init__.py  inference.py  main.py  paths.py  utils.py
doc2graph/models/: graphs.py
doc2graph/models/unet/: __init__.py  decoder.py  model.py
doc2graph/training/: funsd.py  pau.py  utils.py
notebooks/: PAU.ipynb  YOLO.ipynb
output/results/: gcn-1651069965.json  gcn-1651070043.json
output/weights/: cv-1650992863.pt  cv-1651004399.pt  gcn-1651069965.pt  gcn-1651070043.pt
src/: __init__.py  amazing_utils.py  globals.py  inference.py  init.py  main.py  paths.py  preprocessing.py  train.py  utils.py
src/data/: amazing_utils.py  dataloader.py  download.py  feature_builder.py  graph_builder.py  preprocessing.py  utils.py
src/models/: gnn.py  graphs.py  pau.py  setter.py  testing.py  training.py  utils.py
src/models/checkpoints/: e2e-20220722-0840.pt  e2e-20220722-0902.pt  e2e-20220722-0924.pt  e2e-20220722-0945.pt  e2e-20220722-1006.pt  e2e-20220722-1034.pt  e2e-20220722-1051.pt  node.pt
src/models/unet/: decoder.py  model.py
src/training/: amazing_utils.py  cross_val.py  funsd.py  models.py  naf.py  pau.py  sanket.py  train.py  utils.py
src/utils/: common.py  dataloader.py  train.py
tutorial/: kie.ipynb
