[project]
name = "doc2graph"
version = "0.2.0"
description = "Doc2Graph transforms documents into graphs and exploit a GNN to solve several tasks. "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML/DL frameworks
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "dgl<2.0.0",
    
    # Computer Vision
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "easyocr<1.4.0",
    "pytesseract>=0.3.10",
    "segmentation-models-pytorch>=0.3.0",
    
    # Data processing
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    
    # NLP
    "spacy>=3.6.0",
    "fasttext>=0.9.2",
    
    # Visualization
    "matplotlib>=3.7.0",
    "tensorboard>=2.13.0",
    
    # Utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "attrdict>=2.0.1",
    "itsdangerous>=2.0.1",
    "wget>=3.2",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    
    # Development
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]